--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/fragments/adminHeader.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/fragments/adminHeader.html
@@ -16,7 +16,7 @@
     
                     <p class="text-center" id="alerta">&#128133; <span th:text="${alertContext}">Quiérete mucho</span> &#128135;</p>
     
-                    <p class="text-center" sec:authorize="isAuthenticated()">Qué alegría verte de nuevo <span sec:authentication="name">Usuario</span></p>
+                    <p class="text-center" sec:authorize="isAuthenticated()">Qué alegría verte de nuevo <span sec:authentication="principal.name">Usuario</span></p>
                     
                 </div>
     
