--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/fragments/header.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/fragments/header.html
@@ -8,71 +8,87 @@
 <body>
 	
 	<header th:fragment="header">
-	    <div class="container-fluid my-2">
+		<div class="container-fluid my-2">
 	
-	        <div class="container-fluid pt-1">
+			<div class="container-fluid pt-1">
 	
-	            <div class="mx-auto">
+				<div class="mx-auto">
 	
-	                <p class="text-center" id="alerta">&#128133; <span th:text="${alertContext}">Quiérete mucho</span> &#128135;</p>
+					<p class="text-center" id="alerta">&#128133; <span th:text="${alertContext}">Quiérete mucho</span> &#128135;</p>
 	
-	            </div>
+					<p class="text-center" sec:authorize="isAuthenticated()">Qué alegría verte de nuevo <span sec:authentication="principal.name">Usuario</span></p>
+					
+				</div>
 	
-	        </div>
+			</div>
 	
-	        <nav class="navbar navbar-expand-md navbar-light shadow w-100 rounded-2 mt-0 pt-0 pb-0 ">
-	            <div class="container-fluid">
+			<nav class="navbar navbar-expand-md navbar-light shadow w-100 rounded-2 mt-0 pt-0 pb-0 ">
+				<div class="container-fluid">
 	
-	                <div class="container-md">
-	                    <div class="row align-items-center justify-content-start">
-	                        <a class="navbar-brand col-5 mt-0" href="/" th:href="@{/}">
+					<div class="container-md">
+						<div class="row align-items-center justify-content-start">
+							<a class="navbar-brand col-5 mt-0" href="/" th:href="@{/}">
 	
-	                            <img src="../static/img/company-logo.png" th:src="@{/img/company-logo.png}" alt="Logo compañía" width="200px">
+								<img src="../static/img/company-logo.png" th:src="@{/img/company-logo.png}" alt="Logo compañía" width="200px">
 							
-	                        </a>
+							</a>
 	
-	                        <button class="navbar-toggler rounded-2 border-0 shadow-none col-2 me-0 ms-auto " type="button"
-	                            data-bs-toggle="collapse" data-bs-target="#mynavbar">
-	                            <i class="bi bi-view-list text-align-center"></i>
-	                        </button>
-	                    </div>
-	                </div>
+							<button class="navbar-toggler rounded-2 border-0 shadow-none col-2 me-0 ms-auto " type="button"
+								data-bs-toggle="collapse" data-bs-target="#mynavbar">
+								<i class="bi bi-view-list text-align-center"></i>
+							</button>
+						</div>
+					</div>
 	
-	                <div class="collapse navbar-collapse mx-auto" id="mynavbar">
+					<div class="collapse navbar-collapse mx-auto" id="mynavbar">
 	
-	                    <ul class="navbar-nav me-0 ms-auto text-center">
-	                        <li class="nav-item">
-	                            <a class="nav-link" href="../quienessomos/quienesomos.html">¿Quiénes&nbsp;somos?</a>
-	                        </li>
-	                        <li class="nav-item">
-	                            <a class="nav-link" href="/#products" th:href="@{/#products}">
+						<ul class="navbar-nav me-0 ms-auto text-center">
+							<li class="nav-item">
+								<a class="nav-link" href="">¿Quiénes&nbsp;somos?</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="/#products" th:href="@{/#products}">
 									Servicios
 								</a>
-	                        </li>
-	                        <li class="nav-item">
-	                            <a class="nav-link" href="../reclamaciones/reclamaciones.html">Reclamaciones</a>
-	                        </li>
-	                    </ul>
+							</li>
+							<li class="nav-item" sec:authorize="isAuthenticated()">
+								<a class="nav-link" href="/reportForm" th:href="@{/reportForm}">Reclamaciones</a>
+							</li>
+						</ul>
 	
-	                    <form class="d-flex flex-row justify-content-around align-items-center">
+						<form class="d-flex flex-row justify-content-around align-items-center">
 	
-	                        <button class="rounded-3 border-0 btn mx-1" type="button">
-								<a href="/logform" th:href="@{/logform}"><i class="bi bi-person-circle text-align-center text-dark fs-3"></i></a>
-	                        </button>
+							<button class="rounded-3 border-0 btn mx-1" type="button" sec:authorize="!isAuthenticated()">
+								<a href="/login" th:href="@{/login}"><i class="bi bi-person-circle text-align-center text-dark fs-3"></i></a>
+							</button>
 	
-	                        <button class="rounded-3 border-0 btn mx-1 " type="button">
-	                            <i class="bi bi-cart text-align-center text-dark fs-3"></i>
-	                        </button>
+							<button class="rounded-3 border-0 btn mx-1" type="button" sec:authorize="hasRole('ROLE_ADMIN')">
+								<a href="/admin/" th:href="@{/admin/}"><i class="bi bi-person-fill-gear text-align-center text-warning fs-3"></i></a>
+							</button>
 	
-	                    </form>
+							<button class="rounded-3 border-0 btn mx-1" type="button" sec:authorize="hasRole('ROLE_USER')">
+								<a href="/user/" th:href="@{/user/}"><i class="bi bi-person-check-fill text-align-center text-primary fs-3"></i></a>
+							</button>
 	
-	                </div>
+							<button class="rounded-3 border-0 btn mx-1 " type="button" sec:authorize="isAuthenticated()">
+								<a href="javascript:document.getElementById('logoutForm').submit()"><i class="bi bi-person-dash text-align-center text-danger fs-3"></i></a>
+							</button>
 	
-	            </div>
+							<button class="rounded-3 border-0 btn mx-1 " type="button">
+								<i class="bi bi-cart text-align-center text-dark fs-3"></i>
+							</button>
 	
-	        </nav>
+						</form>
 	
-	    </div>
+						<form th:action="@{/logout}" method="POST" id="logoutForm"></form>
+	
+					</div>
+	
+				</div>
+	
+			</nav>
+	
+		</div>
 	</header>
     
 </body>
