--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/register.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/register.html
@@ -103,6 +103,13 @@
 
 	        <div class="container-fluid">
 
+			<div class="row justify-content-center" th:if="${NonAvailableUserName}">
+					<div class="alert alert-danger alert-dismissible fade show col-12 col-md-6" role="alert">
+						¡Vaya! Parece que el nombre de usuario está siendo utilizado.
+						<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+					</div>
+			</div>
+
 				<div class="row justify-content-center">
 
 					<div class="my-1 col-12 col-md-6">
