--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/clientProfile.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/clientProfile.html
@@ -30,16 +30,9 @@
 <body class=" m-0 border-0 min-vh-100 d-flex flex-column">
 
 	<div class="wrapper container-fluid row min-vh-100">
-		<aside class="col-12 col-md-4 col-xxl-2 shadow">
+		
+        <header th:replace="~{fragments/clientMenuAside::clientMenuAside}"></header>
 
-			<h5 class="mt-1 p-2 border-3 border border-primary rounded-pill text-center"><i class="bi bi-arrow-down-right-square"></i> Menú de <span sec:authentication="principal.name">Usuario</span> <i class="bi bi-arrow-up-left-square"></i></h5>
-			<ul class="list-group list-group-flush">
-				<li class="list-group-item text-center fw-bold"> <a class="text-decoration-none text-black" th:href="@{/userMenu/editSelf}"><i class="bi bi-box-arrow-in-up"></i> Editar usuario <i class="bi bi-box-arrow-in-down"></i></a></li>
-				<li class="list-group-item text-center fw-bold"> <a class="text-decoration-none text-black" th:href="@{/userMenu/myReports/}"><i class="bi bi-chat-right-dots"></i> Mis reclamaciones <i class="bi bi-chat-left-dots"></i></a></li>
-				<!--<li class="list-group-item text-center fw-bold"> <a class="text-decoration-none text-black" th:href="@{}"><i class="bi bi-people"></i> Gestión de usuarios <i class="bi bi-people-fill"></i></a></li>-->
-			</ul>
-
-		</aside>
 		<article class="col-12 col-md-8 col-xxl-10">
 
             <div class="container-fluid">
