--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/myAppointments.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/myAppointments.html
@@ -5,8 +5,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiérete Mucho | Reclamaciones</title>
-    <meta name="description" content="Listado de reclamaciones personal para la web de Quiérete Mucho.">
+    <title>Quiérete Mucho | Mis citas</title>
+    <meta name="description" content="Listado de citas personal para la web de Quiérete Mucho.">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -30,8 +30,8 @@
 <body class=" m-0 border-0 min-vh-100 d-flex flex-column">
 
 	<div class="wrapper container-fluid row min-vh-100">
-        
-		<header th:replace="~{fragments/clientMenuAside::clientMenuAside}"></header>
+		
+        <header th:replace="~{fragments/clientMenuAside::clientMenuAside}"></header>
 
 		<article class="col-12 col-md-8 col-xxl-10">
 
@@ -45,15 +45,8 @@
 
             </div>
 
-            <div class="container" th:if="${param.error}">
-                <div class="row justify-content-center mt-4">
-                    <div class="alert alert-danger alert-dismissible fade show col-12 col-md-8" role="alert">
-                        ¡Vaya! Parece que estas intentando editar una reclamacion de la cual no eres propietario.
-                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                    </div>
-                </div>
-            </div>
-
+            <!--nombre Pedido:#appointmentClientId , fecha , precio , pagado , -->
+            
             <table class="table container-fluid table-striped">
 		
                 <legend class="text-center mt-2">Mis reclamaciones</legend>
@@ -61,37 +54,37 @@
                 <thead>
                     <tr class="row justify-content-center">
                         <th class="col-2 text-center">Título</th>
-                        <th class="col-3 text-center">Descripción</th>
                         <th class="col-2 text-center">Fecha</th>
-                        <th class="col-3 text-center">Respuesta</th>
+                        <th class="col-2 text-center">Pagado</th>
+                        <th class="col-2 text-center">Precio</th>
                         <th class="col-1 text-center">Editar</th>
                         <th class="col-1 text-center">Borrar</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr class="row justify-content-center" th:each="report : ${reportSelfList}">
-                        <td class="col-2 text-center" th:text="${report.title}">Título</td>
-                        <td class="col-3 text-center" th:text="${report.description}">Descripción</td>
-                        <td class="col-2 text-center" th:text="${#temporals.format(report.reportDate)}">Fecha</td>
-                        <td class="col-3 text-center" th:text="${report.reply}">Respuesta</td>
-                        <td class="col-1 text-center"><a th:href="@{/userMenu/myReports/EditSelfReport/{id}(id=${report.id})}"><button class="btn btn-primary p-1"><i class="bi bi-pencil-square"></i></button></a></td>
-                        <td class="col-1 text-center"><button class="btn btn-danger p-1" data-bs-toggle="modal" data-bs-target="#delete-modal" th:attr="data-bs-target='#delete-modal'+${report.id}"><i class="bi bi-trash3"></i></button></td>
+                    <tr class="row justify-content-center" th:each="appointment : ${appointmentSelfList}">
+                        <td class="col-2 text-center" th:text="${'Pedido: #'+{id}(id=${appointment.id})}">Título</td>
+                        <td class="col-2 text-center" th:text="${#temporals.format(appointment.appointmentDate)}">Fecha</td>
+                        <td class="col-2 text-center" th:text="${(appointment.paid) ? 'Pagado' : 'No pagado'}">Pagado</td>
+                        <td class="col-2 text-center" th:text="${#numbers.formatDecimal(appointment.fullPrice,0,2)}">Precio</td>
+                        <td class="col-1 text-center"><a th:href="@{/userMenu/myAppointments/edit/}"><button class="btn btn-primary p-1"><i class="bi bi-pencil-square"></i></button></a></td>
+                        <td class="col-1 text-center"><button class="btn btn-danger p-1" data-bs-toggle="modal" data-bs-target="#delete-modal" th:attr="data-bs-target='#delete-modal'+${appointment.id}"><i class="bi bi-trash3"></i></button></td>
 
                         <!--Modal de confirmación de borrado-->
-                        <div class="modal fade" th:attr="id='delete-modal'+${report.id}" role="dialog">
-                            <div class="modal-dialog" role="document" th:attr="id='delete-modal'+${report.id}">
+                        <div class="modal fade" th:attr="id='delete-modal'+${appointment.id}" role="dialog">
+                            <div class="modal-dialog" role="document" th:attr="id='delete-modal'+${appointment.id}">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <h4 class="modal-title">Borrar reclamación</h4>
+                                        <h4 class="modal-title">Borrar cita</h4>
                                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" aria-hidden="true"></button>
                                     </div>
                                     <div class="modal-body container">
                                         <div class="row">
-                                            <p>Pulsando el botón <span class="fw-bold">"Sí"</span> eliminará éste reclamación de forma permanente, ¿está seguro?</p>
+                                            <p>Pulsando el botón <span class="fw-bold">"Sí"</span> eliminará ésta cita de forma permanente, ¿está seguro?</p>
                                         </div>
                                         <div class="row justify-content-center">
                                             <button type="button" class="btn shadow border border-1 border-success col-2 mx-2" data-bs-dismiss="modal">No</button>
-                                            <a class="btn shadow border border-1 border-danger px-3 col-2 mx-2" th:attr="href='/userMenu/myReports/delete/'+${report.id}">Sí</a>
+                                            <a class="btn shadow border border-1 border-danger px-3 col-2 mx-2" th:attr="href='/userMenu/myAppointments/delete/'+${appointment.id}">Sí</a>
                                         </div>
                                     </div>
                                 </div>
@@ -102,7 +95,7 @@
                     </tr>
                 </tbody>
             </table>
-            
+
 		</article>
 	</div>
 
