--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/register.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/register.html
@@ -19,7 +19,7 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
-	<script src="../static/js/regValidation.js" th:src="@{/js/regValidation.js}" defer></script>
+	<!--<script src="../static/js/regValidation.js" th:src="@{/js/regValidation.js}" defer></script>	-->
 
 </head>
 
@@ -88,8 +88,8 @@
 	                <div class="my-1 col-12 col-md-6">
 	                    <label for="password" class="form-label" th:unless="${adminEditing}">Contraseña<sup class="text-danger">*</sup></label>
 						<div class="input-group">
-							<input type="password" class="form-control p-2" id="password" placeholder="************"
-							name="password" th:field="*{password}" required th:type="${visibility}">
+							<input class="form-control p-2" id="password" placeholder="************"
+							name="password" th:field="*{password}" required th:type="${pass}">
 							<div class="input-group-text" th:unless="${adminEditing}"><i class="bi bi-eye"></i></div>
 						</div>
 	                </div>
@@ -97,8 +97,8 @@
 	                <div class="my-1 col-12 col-md-6">
 	                    <label for="password2" class="form-label" th:unless="${adminEditing}">Repetir contraseña<sup class="text-danger">*</sup></label>
 						<div class="input-group">
-	                    	<input type="password" class="form-control p-2" id="password2" placeholder="************"
-	                        name="password2" th:type="${visibility}">
+	                    	<input class="form-control p-2" id="password2" placeholder="************"
+	                        name="password2" th:type="${pass}">
 							<div class="input-group-text" th:unless="${adminEditing}"><i class="bi bi-eye"></i></div>
 						</div>
 	                </div>
@@ -142,11 +142,11 @@
 	                    Iniciar sesión
 	                </button>
 	            </a>
-	            <button type="button" name="submitButton" class="col-6 btn fondo shadow py-2 rounded-2 mx-0 ">Crear cuenta</button>
+	            <button type="submit" name="submitButton" class="col-6 btn fondo shadow py-2 rounded-2 mx-0 ">Crear cuenta</button>
 	        </div>
 			<div class="mt-4 row justify-content-center" th:if="${adminEditing}">
 
-				<button type="button" name="submitButton2" class="col-5 col-xl-3 btn fondo shadow py-2 rounded-2 mx-0 text-center">Editar cuenta</button>
+				<button type="submit" name="submitButton2" class="col-5 col-xl-3 btn fondo shadow py-2 rounded-2 mx-0 text-center">Editar cuenta</button>
 
 			</div>
 	
